[gd_scene load_steps=10 format=3 uid="uid://k1x4c88iouhw"]

[ext_resource type="StyleBox" uid="uid://d4n0b7aoxicg6" path="res://样式/白圆角_方大平面.tres" id="1_b6yp7"]
[ext_resource type="Script" uid="uid://dbr8sjxm8wdqn" path="res://节点/scipt_menu.gd" id="2_mdm0y"]
[ext_resource type="Theme" uid="uid://ya147i270jja" path="res://样式/尖锐输入框.tres" id="3_8842q"]
[ext_resource type="LabelSettings" uid="uid://b8taxan0e7ll" path="res://样式/25黑色字体.tres" id="4_1vdtg"]
[ext_resource type="FontFile" uid="uid://dvsp31cbkagw8" path="res://Font/vivoSans-Bold.ttf" id="4_p86ul"]
[ext_resource type="Theme" uid="uid://o6uty0krg20r" path="res://样式/白圆角_选择按钮.tres" id="5_kyswf"]
[ext_resource type="Theme" uid="uid://cx4sysmtsqffs" path="res://样式/白色平面化按钮.tres" id="7_mjgln"]
[ext_resource type="Script" uid="uid://bhwelyj0p8w5f" path="res://节点/菜单内部小窗口.gd" id="8_khfjc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61f8i"]
border_width_left = 1
border_width_right = 1
border_blend = true

[node name="menu_ent" type="Panel"]
custom_minimum_size = Vector2(1036, 452)
layout_direction = 2
anchors_preset = -1
anchor_left = 0.559
anchor_top = 0.444
anchor_right = 0.559
anchor_bottom = 0.444
offset_left = -515.4
offset_top = -3.60001
offset_right = 517.6
offset_bottom = 447.4
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(450, 50)
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_styles/panel = ExtResource("1_b6yp7")
script = ExtResource("2_mdm0y")
script_node_type = "Menu"

[node name="describe" type="LineEdit" parent="."]
custom_minimum_size = Vector2(700, 40)
layout_mode = 0
offset_left = 152.5
offset_top = 1.5
offset_right = 1011.5
offset_bottom = 41.5
mouse_filter = 1
theme = ExtResource("3_8842q")
theme_override_font_sizes/font_size = 22
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false

[node name="name" type="Label" parent="."]
custom_minimum_size = Vector2(80, 24)
layout_mode = 0
offset_left = 19.0
offset_top = 9.00006
offset_right = 123.0
offset_bottom = 36.0001
mouse_filter = 1
text = "选项菜单"
label_settings = ExtResource("4_1vdtg")

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 54.5
offset_top = 44.5
offset_right = 150.5
offset_bottom = 84.5
theme = ExtResource("5_kyswf")
alignment = 1
clip_text = true

[node name="option_text" type="LineEdit" parent="."]
custom_minimum_size = Vector2(700, 40)
layout_mode = 0
offset_left = 152.5
offset_top = 45.5
offset_right = 1011.5
offset_bottom = 85.5
mouse_filter = 1
theme = ExtResource("3_8842q")
theme_override_fonts/font = ExtResource("4_p86ul")
theme_override_font_sizes/font_size = 22
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false

[node name="add_option_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 8.5
offset_top = 45.5
offset_right = 49.5
offset_bottom = 85.5
theme = ExtResource("7_mjgln")
theme_override_colors/font_color = Color(0.0483333, 0.04, 0.05, 0.784314)
text = "+"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(988, 360)
layout_mode = 0
offset_left = 3.0
offset_top = 89.0
offset_right = 1033.0
offset_bottom = 449.0
theme_override_styles/panel = SubResource("StyleBoxFlat_61f8i")
script = ExtResource("8_khfjc")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1030, 360)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 12

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_entered" from="." to="ScrollContainer" method="_on_menu_ent_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="text_submitted" from="option_text" to="." method="_on_option_text_text_submitted"]
[connection signal="pressed" from="add_option_Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="ScrollContainer" to="ScrollContainer" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer" to="ScrollContainer" method="_on_mouse_exited"]
